# voxy

./: LICENSE  README.md  config.example.toml  pyproject.toml
contrib/: voxy-daemon.service
src/voxy/: __init__.py  __main__.py  audio.py  cli.py  commands.py  config.py  daemon.py  daemon_client.py  output.py  processor.py  prompts.py
src/voxy/stt/: __init__.py  cloud.py  local_sense.py  local_whisper.py
tests/: test_audio.py  test_commands.py  test_processor.py  test_stt_cloud.py  test_stt_sense.py  test_stt_whisper.py
